--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,26 @@
 plugins {
-    id 'java'
+    id('java')
 }
 
-group = 'software'
-version = '0.0.1'
+allprojects {
+    repositories {
+        mavenCentral()
+    }
 
-repositories {
-    mavenCentral()
+    group = 'software'
+    version = '0.0.1'
 }
 
-dependencies {
-    implementation 'org.jetbrains:annotations:26.0.2'
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-}
+subprojects {
+    apply plugin: 'java-library'
 
-test {
-    useJUnitPlatform()
+    dependencies {
+        implementation(libs.annotations)
+        testImplementation(platform(libs.junit.bom))
+        testImplementation(libs.junit.jupiter)
+    }
+
+    test {
+        useJUnitPlatform()
+    }
 }
